[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "na_quantors"
version = "0.0.0"
description = "The na_quantors project is a small collection of functions to check the elements of iterables for being na-values."
readme = "README.rst"
authors = [
    { name = "Johannes", email = "johannes-programming@posteo.org" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.11"

[project.license]
file = "LICENSE.txt"
